# music-manager

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  __init__.py  app.py  auth.py  base.html  bulma-customisation.scss  config.py  database.py  docker-compose.debug.yml  docker-compose.hot-reloading.yml  docker-compose.yml  entrypoint.sh  index.html  job.html  job_song.html  jobs.html  login.html  main.py  manage.py  models.py  music.py  package-lock.json  package.json  playlist.html  playlists.html  profile.html  pyproject.toml  requirements.txt  signup.html  sweep.yaml  tidaldev.py  user.py  web.py  webdata.py
.github/: dependabot.yml
.github/workflows/: build-pr.yml  build-release.yml  create-release.yml  docker-build.yml  ethicalcheck.yml  securestack.yml
app/: __init__.py  database.py  helpers.py  webdata.py
app/auth/: routes.py
app/jobs/: __init__.py  routes.py
app/main/: routes.py
app/models/: job.py  playlist.py  song.py  user.py
app/playlists/: __init__.py  routes.py
app/songs/: __init__.py  routes.py
app/templates/: base.html  index.html  index_logged_in.html  index_not_logged_in.html  job.html  job_song.html  jobs.html  login.html  logout_success.html  playlist.html  playlists.html  profile.html  (+1 more)
logo/: music-manager.ai
templates/: .prettierrc.js  base.html  index.html  job-details.html  job.html  job_song.html  jobs.html  login.html  playlist.html  playlists.html  profile.html  signup.html
web/: .prettierrc.js  index.html  login.html  logout_success.html  signin.html  signup.html  tailwind.config.js
(+4 files in other folders)
